--- a/index.html
+++ b/index.html
@@ -72,6 +72,35 @@
                         </div>
                     </div>
                 </div>
+                <div class="hidden lg:flex gap-8 mx-auto justify-center -mt-14">
+                    <div class="flex gap-6 p-5 bg-white border-2 shadow-xl border-white border-b-green-500 rounded-xl">
+                        <div>
+                            <img src="images/people.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-3xl">500K+</h2>
+                            <p class="text-gray-400">Registered users</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-6 p-5 bg-white border-2 shadow-xl border-white border-b-green-500 rounded-xl">
+                        <div>
+                            <img src="images/ticket-cupon.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-3xl">1.7 Lacks</h2>
+                            <p class="text-gray-400">Tickets sold</p>
+                        </div>
+                    </div>
+                    <div class="flex gap-6 p-5 bg-white border-2 shadow-xl border-white border-b-green-500 rounded-xl">
+                        <div>
+                            <img src="images/stoppage.png" alt="">
+                        </div>
+                        <div>
+                            <h2 class="font-bold text-3xl">80K+</h2>
+                            <p class="text-gray-400">Rental partners</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </header>
 
