Coupon section completed

--- a/index.html
+++ b/index.html
@@ -105,7 +105,43 @@
         </header>
 
         <body>
-
+            <!-- Coupon -->
+            <div class="mt-20 text-center px-3 lg:px-0">
+                <div>
+                    <h1 class="font-bold text-3xl">Best offers for you</h1>
+                </div>
+                <div class="lg:flex flex-col-1 gap-10 mx-auto justify-center mt-10">
+                    <div
+                        class="lg:flex flex-col-1 block bg-[#FFBF0F] px-10 lg:gap-10 rounded-md lg:rounded-2xl items-center">
+                        <div class="lg:space-y-2 text-left">
+                            <h1 class="text-3xl font-extrabold">15% OFF</h1>
+                            <h2 class="font-bold text-sm">on your next purchase</h2>
+                            <p class="font-medium text-xs text-gray-500">use by January 2026</p>
+                        </div>
+                        <div class="hidden lg:block"><img src="images/cupon-devider.png" alt=""></div>
+                        <div class="mr-20 lg:mr-0 mt-4 lg:mt-0">
+                            <h1 class="text-3xl font-extrabold">NEW15</h1>
+                            <p class="font-medium text-xs text-gray-500">Coupon Code</p>
+                        </div>
+                    </div>
+                    <div
+                        class="lg:flex flex-col-1 block bg-[#F78C9C] px-10 lg:gap-10 rounded-md lg:rounded-2xl items-center mt-5 lg:mt-0">
+                        <div class="space-y-2 text-left">
+                            <h1 class="text-3xl font-extrabold">20% OFF</h1>
+                            <h2 class="font-bold text-sm">on your next purchase</h2>
+                            <p class="font-medium text-xs text-gray-500">use by January 2026</p>
+                        </div>
+                        <div class="hidden lg:block"><img src="images/cupon-devider.png" alt=""></div>
+                        <div class="mr-20 lg:mr-0 mt-4 lg:mt-0">
+                            <h1 class="text-3xl font-extrabold">Couple20</h1>
+                            <p class="font-medium text-xs text-gray-500">Coupon Code</p>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <button class="btn border-green-500 bg-white text-green-500 mt-10">See All Offers</button>
+                </div>
+            </div>
         </body>
 
     </main>
