--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <main class="lg:px-10 font-raleway">
+    <main class="font-raleway">
 
-        <header>
+        <header class="lg:px-10">
             <!-- Navbar -->
             <div>
                 <div class="navbar bg-base-100">
@@ -106,13 +106,13 @@
 
         <body>
             <!-- Coupon -->
-            <div class="mt-20 text-center px-3 lg:px-0">
+            <div class="lg:mt-20 mt-5 text-center px-3 lg:px-10">
                 <div>
                     <h1 class="font-bold text-3xl">Best offers for you</h1>
                 </div>
-                <div class="lg:flex flex-col-1 gap-10 mx-auto justify-center mt-10">
+                <div class="lg:flex flex-col-1 gap-10 mx-auto justify-center lg:mt-10 mt-2">
                     <div
-                        class="lg:flex flex-col-1 block bg-[#FFBF0F] px-10 lg:gap-10 rounded-md lg:rounded-2xl items-center">
+                        class="lg:flex flex-col-1 block bg-[#FFBF0F] py-2 lg:py-0 px-10 lg:gap-10 rounded-md lg:rounded-2xl items-center">
                         <div class="lg:space-y-2 text-left">
                             <h1 class="text-3xl font-extrabold">15% OFF</h1>
                             <h2 class="font-bold text-sm">on your next purchase</h2>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
                     <div
-                        class="lg:flex flex-col-1 block bg-[#F78C9C] px-10 lg:gap-10 rounded-md lg:rounded-2xl items-center mt-5 lg:mt-0">
+                        class="lg:flex flex-col-1 block bg-[#F78C9C] px-10 py-2 lg:py-0 lg:gap-10 rounded-md lg:rounded-2xl items-center mt-5 lg:mt-0">
                         <div class="space-y-2 text-left">
                             <h1 class="text-3xl font-extrabold">20% OFF</h1>
                             <h2 class="font-bold text-sm">on your next purchase</h2>
@@ -139,7 +139,65 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn border-green-500 bg-white text-green-500 mt-10">See All Offers</button>
+                    <button class="btn border-green-500 bg-white text-green-500 lg:mt-10 mt-2">See All Offers</button>
+                </div>
+            </div>
+
+            <!-- Ticket Section -->
+            <div class="lg:px-0 px-3 bg-gray-100 rounded-t-3xl mt-10 lg:mt-20 border-t-2 border-green-500">
+                <div class="text-center lg:mt-20 mt-5">
+                    <h1 class="font-bold text-3xl">PH Paribahan</h1>
+                    <p class="mb-5 lg:max-w-md text-xs lg:text-md mx-auto lg:mt-5">
+                        To enjoy our master class service buy tickets and feel your journey with us !
+                    </p>
+                </div>
+
+                <div class="lg:px-10 lg:mt-10">
+                    <div class="lg:flex flex-col-1 block p-3 lg:p-0 bg-white lg:gap-10 rounded-md lg:rounded-2xl lg:justify-between">
+                        <div class="lg:space-y-10 lg:w-2/3 lg:p-10">
+                            <div class="flex lg:justify-between">
+                                <div class="flex gap-3 items-center">
+                                    <div class="hidden lg:block"><img src="images/bus-logo.png" alt=""></div>
+                                    <div>
+                                        <h2 class="text-2xl font-bold">PH Paribahan</h2>
+                                        <p class="text-xs mt-2">Coach-009-WEB ! AC_Business</p>
+                                    </div>
+                                </div>
+                                <div class="lg:flex lg:mx-0 lg:items-center gap-2 px-2 bg-green-100 rounded-lg">
+                                    <img src="images/seat-green.png" alt="">
+                                    <h2 class="text-green-500 text-sm font-medium">
+                                        <span class="font-bold text-lg">40</span>
+                                        Seats left
+                                    </h2>
+                                </div>
+                            </div>
+                            <div class="p-7 rounded-xl mt-3 bg-gray-100 space-y-4">
+                                <div class="lg:flex justify-between">
+                                    <p>Route</p>
+                                    <p>Dhaka - Sylhet</p>
+                                </div>
+                                <hr class="mt-4 divide-dotted">
+                                <div class="lg:flex justify-between">
+                                    <p>Departure time</p>
+                                    <p>9:00 PM</p>
+                                </div>
+                                <hr class="mt-4 divide-dotted">
+                                <div class="lg:flex space-y-4 lg:space-y-0 lg:gap-1 justify-between">
+                                    <p class="p-4 px-5 bg-gray-200 rounded-lg text-sm">Boarding Point - Laxmipur</p>
+                                    <p class="p-4 px-5 bg-gray-200 rounded-lg text-sm">Dropping Point - Bogura</p>
+                                    <p class="p-4 px-5 bg-gray-200 rounded-lg text-sm">Est. Time - 11 Hour</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="flex items-center">
+                            <div class="hidden lg:block"><img src="images/info-devider.png" alt=""></div>
+                            <div class="mx-auto mt-4 lg:mr-20 lg:mt-0">
+                                <img class="mx-auto" src="images/fare.png" alt="">
+                                <h1 class="text-3xl font-extrabold">550 Taka</h1>
+                                <p class="font-medium text-gray-500 text-center">Per Seat</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </body>
