--- a/index.html
+++ b/index.html
@@ -390,28 +390,29 @@
                                             class="input input-bordered w-full max-w-xs" />
                                     </label>
                                 </div>
-                                <!-- <button
-                                    class="btn bg-green-500 text-white w-full opacity-40 cursor-not-allowed">Next</button> -->
-                                <!-- Open the modal using ID.showModal() method -->
-                                <button id="next-button" class="btn bg-green-500 text-white w-full opacity-40 cursor-not-allowed" onclick="my_modal_1.showModal()">Next</button>
-                                <dialog id="my_modal_1" class="modal">
-                                    <div class="modal-box">
-                                        <h3 class="text-lg font-bold">Hello!</h3>
-                                        <p class="py-4">Press ESC key or click the button below to close</p>
-                                        <div class="modal-action">
-                                            <form method="dialog">
-                                                <!-- if there is a button in form, it will close the modal -->
-                                                <button class="btn">Close</button>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </dialog>
+                                <button id="next-button"
+                                    class="btn bg-green-500 text-white w-full opacity-40 cursor-not-allowed">Next</button>
                                 <div class="lg:flex justify-around text-center">
                                     <a class="underline opacity-40 font-medium" href="">Terms & Conditions</a>
                                     <a class="underline opacity-40 font-medium" href="">Cancellation Policy</a>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Modal -->
+            <div id="modal-container" class="lg:px-10 bg-gray-100 hidden">
+                <div class="lg:p-20 bg-gray-100 text-center">
+                    <div class="bg-white space-y-4 py-10 px-5 rounded-xl">
+                        <img class="mx-auto" src="images/success.png" alt="">
+                        <h1 class="lg:text-2xl font-bold text-green-500">SUCCESS</h1>
+                        <P class="text-sm font-bold">Thank you for Booking Our Bus Seats. <br>
+                            We are working hard to find the best service and deals for you.</P>
+                        <p class="text-sm">Shortly you will find a confirmation in your email.</p>
+                        <button class="btn bg-green-500 text-white px-5 py-2 lg:rounded-full w-1/3
+                        ">Continue</button>
                     </div>
                 </div>
             </div>
