Decrease number from total seat count

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <div class="lg:flex lg:mx-0 lg:items-center gap-2 px-2 bg-green-100 rounded-lg">
                                     <img src="images/seat-green.png" alt="">
                                     <h2 class="text-green-500 text-sm font-medium">
-                                        <span class="font-bold text-lg">40</span>
+                                        <span id="seat-amount" class="font-bold text-lg">40</span>
                                         Seats left
                                     </h2>
                                 </div>
@@ -221,113 +221,113 @@
                             <div class="lg:space-y-5">
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">A</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">A2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">A2</button>
+                                    <button id="seat-buttonseat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">A4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">B</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">B2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">B2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">B4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">C</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">C2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">C2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">C4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">D</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">D2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">D2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">D4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">E</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">E2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">E2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">E4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">F</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">F2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">F2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">F4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">G</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">G2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">G2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">G4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">H</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">H2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">H2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">H4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">I</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">I2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">I2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">I4</button>
                                 </div>
                                 <div class="grid grid-cols-5 gap-5 space-y-2 lg:space-y-0 items-center">
                                     <p class="hidden lg:block">J</p>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J1</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">J2</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J3</button>
-                                    <button
-                                        class="btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J4</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J1</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none lg:mr-10 hover:text-white">J2</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J3</button>
+                                    <button id="seat-button"
+                                        class="seat-button btn lg:px-10 border-none hover:bg-green-500 hover:border-none hover:text-white">J4</button>
                                 </div>
                             </div>
                         </div>
