--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                         <div class="label">
                                             <span class="label-text font-bold">Passenger Name *</span>
                                         </div>
-                                        <input id="passenger-input" type="text" placeholder="Enter your name"
+                                        <input id="passenger-input" type="text" required placeholder="Enter your name"
                                             class="input input-bordered w-full max-w-xs" />
                                     </label>
                                 </div>
@@ -462,7 +462,7 @@
                 <P class="text-sm font-bold">Thank you for Booking Our Bus Seats. <br>
                     We are working hard to find the best service and deals for you.</P>
                 <p class="text-sm">Shortly you will find a confirmation in your email.</p>
-                <button class="btn bg-green-500 text-white px-5 py-2 lg:rounded-full w-1/3
+                <button id="continue-button" class="btn bg-green-500 text-white px-5 py-2 lg:rounded-full w-1/3
     ">Continue</button>
             </div>
         </div>
